bee-common/bee-packable-derive/tests/fail/invalid_unpack_error_type.stderr
error: The `unpack_error` attribute key requires a type for its value.
  --> tests/fail/invalid_unpack_error_type.rs:11:27
   |
11 | #[packable(unpack_error = 1)]
   |                           ^
